fixed landing on safari

--- a/public/main.scss
+++ b/public/main.scss
@@ -540,7 +540,7 @@ p {
     left: 0;
     right: 0;
     bottom: 0;
-    display: grid;
+    display: flex;
 
     @media screen and (max-width: $mobile-width) {
       top: $margin-top;
